fix(notched-outline): Fix alignment issue when parent container has text-align: center

--- a/packages/mdc-notched-outline/mdc-notched-outline.scss
+++ b/packages/mdc-notched-outline/mdc-notched-outline.scss
@@ -23,8 +23,6 @@
 // Notched Outline is intended for use by multiple components, but its styles should only be emitted once when bundled
 @include mdc-base-emit-once("mdc-notched-outline") {
   .mdc-notched-outline {
-    @include mdc-rtl-reflexive(text-align, left, text-align, right);
-
     position: absolute;
     top: 0;
     left: 0;
@@ -32,7 +30,12 @@
     height: calc(100% - 2px);
     transition: opacity $mdc-notched-outline-transition-duration $mdc-animation-standard-curve-timing-function;
     opacity: 0;
+    text-align: left;
     overflow: hidden;
+
+    @include mdc-rtl {
+      text-align: right;
+    }
 
     // stylelint-disable selector-max-type
     svg {
